Rename room types to unit types
